@@ -10,7 +10,7 @@ export(.check3d,
 	newSubscene3d, next3d, observer3d, octahedron3d, oh3d, open3d, 
 	par3d, par3dinterp, particles3d, persp3d, planes3d, play3d, plot3d, points3d, 
 	polygon3d, pop3d,
-	qmesh3d, quads3d, readSTL, rgl.abclines, rgl.bbox, rgl.bg, rgl.bringtotop, rgl.clear,
+	qmesh3d, quads3d, readOBJ, readSTL, rgl.abclines, rgl.bbox, rgl.bg, rgl.bringtotop, rgl.clear,
 	rgl.close, rgl.cur, rgl.ids, rgl.init, rgl.light, rgl.lines, rgl.linestrips,
 	rgl.clipplanes, rgl.material, rgl.open, rgl.pixels, rgl.planes, rgl.points, rgl.pop, rgl.postscript,
 	rgl.primitive, rgl.projection, rgl.quads, rgl.quit, rgl.Sweave, rgl.Sweave.off,
